k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  test-svc
spec:
  selector:
    app: test-deploy
  type:  ClusterIP 
  ports:
  - name:  http
    port:  8080
    targetPort:  8080
